--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "next": "15.3.2",
+    "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
